<resources>
    <string name="app_name">Task Timer</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="menuTitle_AddTask">Add Task</string>
    <string name="menuTitle_ShowDurations">Durations Report</string>
    <string name="menuTitle_ShowAbout">About Tasktimer</string>
    <string name="menuTitle_Generate">Generate Data</string>
    <string name="no_task_selected_message">No task selected!</string>
    <string name="edit_button_description">Button to edit a task\'s detail</string>
    <string name="delete_button_description">Button to delete a task</string>
    <string name="addEdit_name_hint">Task name: Required</string>
    <string name="addEdit_description_hint">Task description: optional</string>
    <string name="addEdit_sort_hint">Order: sorts low to high</string>
    <string name="addEdit_save_text">Save</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="instructions_heading">Instructions</string>
    <string name="instructions">Use the add button (+) in the toolbar above to create new tasks.\n\nTasks with lower sort orders will be placed higher up the list.Tasks with the same sort order will be sorted alphabetically.\n\nTapping a task will start the timer for that task (and will stop the timer for any previous task that was being timed).\n\nEach task has Edit and Delete buttons if you want to change the details or remove the task.</string>
    <string name="cancel">cancel</string>
    <string name="ok">ok</string>
    <string name="deldiag_positive_caption">Delete</string>
    <string name="deldiag_message">Deleting will also delete all timing data associated with task id %1$d: %2$s.</string>
    <string name="cancelEditDiag_message">You have unsaved changes. Do you want to abandon your changes, or continue editing?</string>
    <string name="cancelEditDiag_positiveCaption">Abandon Changes</string>
    <string name="cancelEditDiag_negativeCaption">Continue Editing</string>
    <string name="about_copyright">Copyright © 2021 Gitje</string>
    <string name="about_weblink">Instructions available at www.google.com</string>
    <string name="about_email">For support, contact fiets@support.com</string>
    <string name="about_credits">Icon derived from <b>analog clock</b> at openclipart.org by <b>Anonymous</b></string>
</resources>