<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/task_details_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/addEdit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/addEdit_name_hint"
        android:importantForAutofill="no"
        android:inputType="textNoSuggestions"
        android:maxLength="64" />

    <EditText
        android:id="@+id/addEdit_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/addEdit_description_hint"
        android:importantForAutofill="no"
        android:inputType="textMultiLine|textPersonName"
        android:maxLength="256" />

    <EditText
        android:id="@+id/addEdit_sortOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/addEdit_sort_hint"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="9" />

    <Button
        android:id="@+id/addEdit_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawableStart="@android:drawable/ic_menu_save"
        android:text="@string/addEdit_save_text" />
</LinearLayout>